update article detail

--- a/src/components/layout/index.styl
+++ b/src/components/layout/index.styl
@@ -1,8 +1,12 @@
 .lj-layout
   padding-top 80px
   position relative
+  height 100vh
+  overflow-y scroll
   &-container
     position relative
     display flex
     margin 0 auto
+    padding-bottom 30px
     width 1050px
+    min-height calc(100vh - 80px - 60px)
