--- a/src/components/layout/background/index.styl
+++ b/src/components/layout/background/index.styl
@@ -4,13 +4,13 @@
   left 0
   width 100%
   height 100%
-  background-color alpha(#FFFFFF, 40%)
+  background-color var(--body-bg)
   z-index -1
   &-image
     position absolute
     width 100%
     height 100%
-    background-image url('@assets/images/background.jpg')
+    background-image url('@assets/images/background.png')
     background-position center
     background-size cover
-    opacity 0.4
+    opacity 0.3
