--- a/src/components/layout/header.styl
+++ b/src/components/layout/header.styl
@@ -1,10 +1,12 @@
+@import '@styles/theme.styl';
 .lj-header
   position fixed
   top 0
   left 0
   width 100vw
   height 60px
-  background-color alpha(#FFFFFF, 70%)
+  background-color var(--module-bg)
+  backdrop-filter: blur(5px);
   z-index 12
   &-container
     display flex
