--- a/src/styles/reset.styl
+++ b/src/styles/reset.styl
@@ -106,295 +106,289 @@ input
   
 
 
-// main
-//   display block // Android 4.3-, Internet Explorer 11-, Windows Phone 8.1+
+main
+  display block // Android 4.3-, Internet Explorer 11-, Windows Phone 8.1+
 
 
-// progress
-//   display inline-block // Internet Explorer 11-, Windows Phone 8.1+
+progress
+  display inline-block // Internet Explorer 11-, Windows Phone 8.1+
 
 
-// summary
-//   display block // Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+
+summary
+  display block // Firefox 40+, Internet Explorer 11-, Windows Phone 8.1+
 
 
-// svg:not(:root)
-//   overflow hidden // Internet Explorer 11-
+svg:not(:root)
+  overflow hidden // Internet Explorer 11-
 
 
-// template
-//   display none // Android 4.3-, Internet Explorer 11-, iOS 7-, Safari 7-, Windows Phone 8.1+
+template
+  display none // Android 4.3-, Internet Explorer 11-, iOS 7-, Safari 7-, Windows Phone 8.1+
 
 
-// textarea
-//   overflow auto // Edge 12+, Internet Explorer 11-
+textarea
+  overflow auto // Edge 12+, Internet Explorer 11-
 
+
+button,
+input,
+select,
+textarea
+  font-family inherit
+  font-style inherit
+  font-weight inherit
+
+
+
+/*
+ * Opinionated defaults
+ */
+
+// remove the tapping delay from clickable elements
+
+a,
+area,
+button,
+input,
+label,
+select,
+textarea,
+[tabindex]
+  touch-action manipulation
+
+
+// specify the standard appearance of selects
+
+select
+  -moz-appearance none    // Firefox 40+
+  -webkit-appearance none // Chrome 45+
+
+  &::-ms-expand
+    display none        // Edge 12+, Internet Explorer 11-
+  
+
+  &::-ms-value
+    color currentColor  // Edge 12+, Internet Explorer 11-
+  
+
+
+// use current current as the default fill of svg elements
+
+svg
+  fill currentColor
+
+
+// specify the progress cursor of updating elements
+
+[aria-busy="true"]
+  cursor progress
+
+
+// specify the pointer cursor of trigger elements
+
+[aria-controls]
+  cursor pointer
+
+
+// specify the unstyled cursor of disabled, not-editable, or otherwise inoperable elements
+
+[aria-disabled]
+  cursor default
+
+
+// specify the style of visually hidden yet accessible elements
+
+[hidden][aria-hidden="false"]
+  clip rect(0 0 0 0)
+  display inherit
+  position absolute
+
+  &:focus
+    clip auto
+  
+
+
+// specify the alignment of media elements
+
+
+// audio,
+// canvas,
+// iframe,
+// img,
+// svg,
+// video
+//   vertical-align if(variable-exists(media-element-vertical-align), $media-element-vertical-align, middle)
+
+// specify the background color of form elements
 
 // button,
 // input,
 // select,
 // textarea
-//   font-family inherit
-//   font-style inherit
-//   font-weight inherit
+//   background-color if(variable-exists(form-element-background-color), $form-element-background-color, transparent)
+//   color if(variable-exists(form-element-color), $form-element-color, inherit)
 
 
+// specify the minimum height of form elements
 
-// /*
-//  * Opinionated defaults
-//  */
-
-// // remove the tapping delay from clickable elements
-
-// a,
-// area,
-// button,
-// input,
-// label,
-// select,
-// textarea,
-// [tabindex]
-//   touch-action manipulation
-
-
-// // specify the standard appearance of selects
-
-// select
-//   -moz-appearance none    // Firefox 40+
-//   -webkit-appearance none // Chrome 45+
-
-//   &::-ms-expand
-//     display none        // Edge 12+, Internet Explorer 11-
-  
-
-//   &::-ms-value
-//     color currentColor  // Edge 12+, Internet Explorer 11-
-  
+button,
+[type="button"],
+[type="date"],
+[type="datetime"],
+[type="datetime-local"],
+[type="email"],
+[type="month"],
+[type="number"],
+[type="password"],
+[type="reset"],
+[type="search"],
+[type="submit"],
+[type="tel"],
+[type="text"],
+[type="time"],
+[type="url"],
+[type="week"],
+select,
+textarea
+  min-height 40px
 
 
-// // use current current as the default fill of svg elements
+// specify the font family of code elements
 
-// svg
-//   fill currentColor
-
-
-// // specify the progress cursor of updating elements
-
-// [aria-busy="true"]
-//   cursor progress
+code,
+kbd,
+pre,
+samp
+  font-family SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace
 
 
-// // specify the pointer cursor of trigger elements
+// specify the list style of nav lists
 
-// [aria-controls]
-//   cursor pointer
-
-
-// // specify the unstyled cursor of disabled, not-editable, or otherwise inoperable elements
-
-// [aria-disabled]
-//   cursor default
+// nav ol,
+// nav ul
+//   list-style if(variable-exists(nav-list-style), $nav-list-style, none)
 
 
-// // specify the style of visually hidden yet accessible elements
-
-// [hidden][aria-hidden="false"]
-//   clip rect(0 0 0 0)
-//   display inherit
-//   position absolute
-
-//   &:focus
-//     clip auto
-  
-
-
-// // specify the alignment of media elements
+main,
+header,
+footer,
+article,
+section,
+aside,
+details,
+summary
+  margin 0 auto
+  width 100%
 
 
-// // audio,
-// // canvas,
-// // iframe,
-// // img,
-// // svg,
-// // video
-// //   vertical-align if(variable-exists(media-element-vertical-align), $media-element-vertical-align, middle)
-
-// // specify the background color of form elements
-
-// // button,
-// // input,
-// // select,
-// // textarea
-// //   background-color if(variable-exists(form-element-background-color), $form-element-background-color, transparent)
-// //   color if(variable-exists(form-element-color), $form-element-color, inherit)
+footer
+  clear both
 
 
-// // specify the minimum height of form elements
-
-// button,
-// [type="button"],
-// [type="date"],
-// [type="datetime"],
-// [type="datetime-local"],
-// [type="email"],
-// [type="month"],
-// [type="number"],
-// [type="password"],
-// [type="reset"],
-// [type="search"],
-// [type="submit"],
-// [type="tel"],
-// [type="text"],
-// [type="time"],
-// [type="url"],
-// [type="week"],
-// select,
-// textarea
-//   min-height 40px
+img
+  height auto
 
 
-// // specify the font family of code elements
-
-// code,
-// kbd,
-// pre,
-// samp
-//   font-family SFMono-Regular, Consolas, Liberation Mono, Menlo, monospace
-
-
-// // specify the list style of nav lists
-
-// // nav ol,
-// // nav ul
-// //   list-style if(variable-exists(nav-list-style), $nav-list-style, none)
-
-
-// main,
-// header,
-// footer,
-// article,
-// section,
-// aside,
-// details,
-// summary
-//   margin 0 auto
-//   width 100%
-
-
-// footer
-//   clear both
-
-
-// img
-//   height auto
-
-
-// @media screen and (max-width $small-breakpoint)
-//   article,
-//   section,
-//   aside
-//     clear both
-//     display block
-//     max-width 100%
+@media screen and (max-width $small-breakpoint)
+  article,
+  section,
+  aside
+    clear both
+    display block
+    max-width 100%
   
 
 
-// p
-//   margin 0
-//   margin-bottom 1em
+p
+  margin 0
+  margin-bottom 1em
 
 
-// h1,
-// h2,
-// h3,
-// h4,
-// h5,
-// h6
-//   color inherit
-//   font-family inherit
-//   line-height inherit
+h1,
+h2,
+h3,
+h4,
+h5,
+h6
+  color inherit
+  font-family inherit
+  line-height inherit
 
 
-// h1
-//   font-size $font-size-h1
-//   font-weight 700
-//   margin 1em 0
+h1
+  font-size $font-size-h1
+  font-weight 700
+  margin 1em 0
 
 
-// h2
-//   font-size $font-size-h2
-//   font-weight 700
-//   margin 1em 0
+h2
+  font-size $font-size-h2
+  font-weight 700
+  margin 1em 0
 
 
-// h3
-//   font-size $font-size-h3
-//   font-weight 600
-//   margin 1em 0
+h3
+  font-size $font-size-h3
+  font-weight 600
+  margin 1em 0
 
 
-// h4
-//   font-size $font-size-h4
-//   font-weight 500
-//   margin 1em 0
+h4
+  font-size $font-size-h4
+  font-weight 500
+  margin 1em 0
 
 
-// h5
-//   font-size $font-size-h5
-//   font-weight 500
-//   margin 1em 0
+h5
+  font-size $font-size-h5
+  font-weight 500
+  margin 1em 0
 
 
-// h6
-//   // color $text-secondary
-//   font-size $font-size-h6
-//   font-weight 400
-//   margin 1em 0
+h6
+  // color $text-secondary
+  font-size $font-size-h6
+  font-weight 400
+  margin 1em 0
 
 
-// small
-//   // color $text-secondary
-//   vertical-align bottom
-//   // font-size $font-size-small
+small
+  // color $text-secondary
+  vertical-align bottom
+  // font-size $font-size-small
 
 
-// pre
-//   margin 0
-//   display block
-//   white-space pre
+pre
+  margin 0
+  display block
+  white-space pre
 
 
-// code
-//   margin 0
-//   padding 0
-//   vertical-align baseline
-//   word-break break-word
-//   word-wrap break-word
-//   overflow auto
-
+code
+  margin 0
+  padding 0
+  vertical-align baseline
+  word-break break-word
+  word-wrap break-word
+  overflow scroll
 
 a
   color #333
   &:hover,
   &:focus
     color $link-color-hover
-  
-
 
 dl
   margin-bottom 1em
 
-
 dd
   margin-left 3em
-
 
 ul,
 ol
   margin-bottom 1em
   padding-left 3em
   vertical-align baseline
-
 
 blockquote
   margin 1em 0
@@ -404,18 +398,14 @@ blockquote
   padding .5em 1em
   padding-left 1.5em
 
-
 figcaption
   font-family $font-family-normal
-
 
 u
   text-decoration underline
 
-
 s
   text-decoration line-through
-
 
 sup
   font-size $font-size-small
