--- a/src/components/layout/aside/right.styl
+++ b/src/components/layout/aside/right.styl
@@ -1,3 +1,9 @@
+@import '@/styles/init.styl';
+
 .lj-right-aside
   margin-left 20px
   width 260px
+  &-search
+    padding 8px
+    background-color $white
+    border-radius 4px
