--- a/src/styles/reset.styl
+++ b/src/styles/reset.styl
@@ -250,7 +250,8 @@ button,
 [type="week"],
 select,
 textarea
-  min-height 40px
+  // min-height 40px
+  appearance none
 
 
 // specify the font family of code elements
@@ -442,8 +443,6 @@ input[type="tel"],
 select
   background $module-bg
   color $text
-  display inline-block
-  padding $xs-gap
   vertical-align middle
 
 
