--- a/src/components/layout/aside/nav.styl
+++ b/src/components/layout/aside/nav.styl
@@ -1,3 +1,4 @@
+
 .lj-aside-nav
   padding 0 1rem
   height 3em
@@ -7,3 +8,6 @@
   a
     display inline-block
     line-height 3em
+    font-family Conv_webfont_lj,webfont-normal,DINRegular
+    font-weight 700
+    color var(--text-secondary)
