--- a/src/styles/font.styl
+++ b/src/styles/font.styl
@@ -1,9 +1,41 @@
-/* Logo 字体 */
+
+// font-display DOC: https://developer.mozilla.org/zh-cn/docs/Web/CSS/@font-face/font-display
+
 @font-face {
-  font-family: "iconfont logo";
-  src: url('https://at.alicdn.com/t/font_985780_km7mi63cihi.eot?t=1545807318834');
-  src: url('https://at.alicdn.com/t/font_985780_km7mi63cihi.eot?t=1545807318834#iefix') format('embedded-opentype'),
-    url('https://at.alicdn.com/t/font_985780_km7mi63cihi.woff?t=1545807318834') format('woff'),
-    url('https://at.alicdn.com/t/font_985780_km7mi63cihi.ttf?t=1545807318834') format('truetype'),
-    url('https://at.alicdn.com/t/font_985780_km7mi63cihi.svg?t=1545807318834#iconfont') format('svg');
+  font-family: SpecialSymbol;
+  src: local('PingFang SC'), local('Microsoft Yahei');
+  unicode-range: U+02C2, U+02C3, U+003C, U+003E, U+3009;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: Monda;
+  src: cdn-url('../assets/fonts/Monda-Regular.ttf');
+  unicode-range: U+21-3B,U+3D,U+3F-5F,U+61-7D;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: DINRegular;
+  src: cdn-url('../assets/fonts/DIN-Regular.ttf');
+  // CSS Unicode Range Generator https://codepen.io/elifitch/pen/Ljqway
+  // abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789/.=-;',?!#@$%^&*()_+\|:"[]{}
+  unicode-range: U+21-3B,U+3D,U+3F-5F,U+61-7D;
+}
+
+@font-face {
+  font-display: swap;
+  font-family: 'SFMono-Regular';
+  src: cdn-url('../assets/fonts/SFMonoRegular.otf') format('opentype');
+}
+
+// 阿里巴巴-普惠体-Regular
+// 首页技术专题异想天开生活游记个人简介，、；。
+@font-face {
+	font-family: 'Conv_webfont_lj';
+	src: url('../assets/fonts/webfont_lj.eot');
+	src: local('☺'),
+  url('../assets/fonts/webfont_lj.woff') format('woff'),
+  url('../assets/fonts/webfont_lj.ttf') format('truetype'),
+  url('../assets/fonts/webfont_lj.svg') format('svg');
 }
