update article list

--- a/src/components/Article/ArticleItem/index.styl
+++ b/src/components/Article/ArticleItem/index.styl
@@ -16,7 +16,11 @@
     left 10px
     width 180px
     height 115px
-    background-color #364d79
+    background-color rgba($white, 0.2)
+    &-tag
+      position absolute
+      top 0
+      left 0
   &-content
     display flex
     align-items flex-start
