--- a/src/App.styl
+++ b/src/App.styl
@@ -1,10 +1,10 @@
-@import "./styles/init.styl"
-@import "./styles/font.styl"
-// @import "./styles/iconfont.styl"
-@import "./assets/font/iconfont.css"
-@import "./styles/reset.styl"
-@import "./styles/universal.styl"
-@import "./styles/markdown.styl"
+@import "./styles/init.styl";
+@import "./styles/font.styl";
+// @import "./styles/iconfont.styl";
+@import "./assets/font/iconfont.css";
+@import "./styles/reset.styl";
+@import "./styles/universal.styl";
+@import "./styles/markdown.styl";
 
 .App
   color var(--text-color)
