--- a/src/components/Article/ArticleItem/index.styl
+++ b/src/components/Article/ArticleItem/index.styl
@@ -7,7 +7,8 @@
   padding 10px 10px 10px 200px
   height 135px
   border-radius 6px
-  background-color rgba($white, 0.6)
+  background-color rgba($white, 0.4)
+  transition background 0.4s
   &:hover
     background-color $white
   &-media
@@ -32,6 +33,7 @@
       color rgba($black, 0.8)
       font-size 15px
       font-weight 600
+      font-family 'SFMono-Regular',DINRegular,Monda,SpecialSymbol
     &-actions
       display flex
       align-items center
