--- a/src/components/layout/header.styl
+++ b/src/components/layout/header.styl
@@ -1,4 +1,4 @@
-@import '@/styles/theme.styl';
+@import '@/styles/init.styl';
 .lj-header
   position fixed
   top 0
@@ -14,4 +14,18 @@
     margin 0 auto
     width 1050px
     height 60px
+    &-title
+      margin 4px 0;
+      font-size 21px
+      font-weight 700
+      color $black
+      font-family DINRegular
+      // color $music163-primary
+    &-motto
+      margin-left 120px
+      font-size 12px
+      font-weight 600
+      color rgba($black, 0.6)
+      font-family 'SFMono-Regular',DINRegular,Monda,SpecialSymbol
+
   
