--- a/src/components/carousel/Item/index.styl
+++ b/src/components/carousel/Item/index.styl
@@ -4,14 +4,15 @@
   position relative
   height 210px
   border-radius 4px
-  background #364d79
+    
   p
     position absolute
-    left 0
-    bottom 50px
-    width 100%
-    height auto
-    font-size 16px
+    top 24px
+    right 32px
+    padding 4px 12px
+    font-size 14px
+    font-weight 600
     font-family DINRegular,Monda,SpecialSymbol
-    color $white
+    color rgba($black, 0.6)
     text-align center
+    background-color rgba($white, 0.8)
